# mlops-project

./: .flake8  .pre-commit-config.yaml  .release-please-manifest.json  README.md  Taskfile.yaml  Taskfile.yml  Tiltfile  devbox.json  pyproject.toml  pytest.ini  release-please-config.json
frontend/: CHANGELOG.md  Tiltfile  (+4 more)
ml_server/: .env.example  CHANGELOG.md  Dockerfile  Taskfile.yaml  Tiltfile  alembic.ini  init.sql  pyproject.toml
ml_server/migrations/: env.py
ml_server/migrations/versions/: 3253cfad0339_adds_audit_log.py  3f4675daad1b_add_passwordreset_table.py  5cdd1afee91a_adds_email_verification_and_user_create_.py  773e0775ee20_adds_api_request_logs_table.py  7a9d2834710d_add_revoked_at_timestamp_to_pat_and_.py  8005d87818fa_adds_pat_table.py  9bfeac28f35e_added_user_table.py  c67de29153b8_changes_event_column_to_use_enum_in_.py  e25f1d950257_adds_session_table.py  f27addd1293e_adds_userauthmethod_model.py
ml_server/src/ml_server/: app.py  main.py
ml_server/src/ml_server/conf/: settings.py
ml_server/src/ml_server/dependencies/: current_user.py  db.py  pat_token.py  rate_limit.py  settings.py
ml_server/src/ml_server/models/: __init__.py  audit_log.py  data_models.py  email_verification.py  password_reset.py  pat.py  request_log.py  user.py  user_auth_method.py  user_session.py
ml_server/src/ml_server/routes/: audit_log.py  auth.py  general.py  pat.py  requests.py
ml_server/src/ml_server/schemas/: audit_log.py  llm.py  pat.py  requests.py  user.py
ml_server/src/ml_server/services/: audit_log.py  email.py  ml_model.py  oauth.py  pat.py  predict_metrics.py  request_log.py  session.py
ml_server/src/ml_server/utils/: frontend_urls.py
ml_server/src/tests/: conftest.py  test_main.py  test_ml_model.py
ml_server/src/tests/api/: test_audit_log.py  test_email.py  test_forgot_password.py  test_login.py  test_login_oauth2.py  test_logout.py  test_me.py  test_pat.py  test_predict.py  test_register.py  test_requests.py
server/: .dockerignore  CHANGELOG.md  Dockerfile  Taskfile.yaml  Tiltfile  data_models.py  main.py  ml_model.py  pyproject.toml  requirements.txt  test_main.py  test_ml_model.py
server/src/: main.py  ml_model.py  test_main.py  test_ml_model.py
server/src/server/: __init__.py  main.py
server/src/tests/: test_main.py  test_ml_model.py
(+156 files in other folders)
